[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BoKenLm"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "Tibetan language model training using KenLM with botok tokenization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "botok",
    "botok-rs @ git+https://github.com/OpenPecha/botok-rs.git",
    "sentencepiece",
    "kenlm",
    "huggingface_hub",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/BoKenLm"
"Bug Tracker" = "https://github.com/OpenPecha/BoKenLm/issues"
"Training Data" = "https://github.com/OpenPecha/BoKenLm/releases"
